# coana

./: .gitignore  CLAUDE.md  Modelfile.txt  README.md  install_uv.sh  kk.typ  package-lock.json  pyproject.toml
.claude/: settings.local.json
coana/: cli.py
coana/.claude/: settings.local.json
coana/apps/: editor_tree.py  gen_especificacion.py  gen_informes.py  verificar_cuadres.py  visor_entradas.py
coana/fase1/: __init__.py  amortizaciones.py  cargos.py  clasificador_actividades.py  clasificador_centros_coste.py  grupo_por_proyecto.py  investigacion.py  investigación.py  kalendas.py  suministros.py
coana/fase1/docencia/: __init__.py  contexto.py
coana/fase1/inventario/: __init__.py  contexto.py  procesamiento.py
coana/fase1/nóminas/: __init__.py  contexto.py  reducciones_jornada.py  reducciones_sindicales.py  regla_23.py
coana/fase1/presupuesto/: __init__.py  contexto.py  traductor.py
coana/fase1/regla23/: __init__.py  reducción_sindical_pdi.py  reparto.py  uc_reparto.py
coana/fase2/: __init__.py  _cuadro_jerarquico.py  calculo.py  cuadro_10_1.py  cuadro_10_3.py  cuadro_10_4.py  cuadro_10_5.py  cuadro_10_7.py
coana/reparto/: __init__.py  _servicios.py  reparto.py  tabla_dag_centro.py
coana/util/: __init__.py  arbol.py  configuración.py  diccionario_ficheros.py  euro.py  excel_cache.py  normalize.py  unidad_de_coste.py
coana/web/: __init__.py  app.py  deps.py  launcher.py  streaming.py
coana/web/routers/: amortizaciones.py  cargos.py  entradas.py  estado.py  (+14 more)
data/: configuración.xlsx
data/informes/: cuadro_10_1.xlsx  cuadro_10_1.yaml  cuadro_10_3.xlsx  cuadro_10_3.yaml  cuadro_10_4.xlsx  cuadro_10_4.yaml  cuadro_10_5.xlsx  cuadro_10_5.yaml  cuadro_10_7.xlsx  cuadro_10_7.yaml
documentación/: 1  app.typ  auditoría.typ  especificación.typ  preámbulo.typ  revisión_especificación.typ
documentación/img/: fase1.drawio  fase1.typ  filtro presupuesto.drawio
documentación/informes/: informes.typ
src/coana/: __init__.py  configuración.py  elemento_de_coste.py  elementos_de_coste.py  estructuras.py  etiquetador.py  ficheros.py  maestros.py  árbol.py
tests/: test_normalize.py  test_presupuesto_endpoints.py  test_query.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+174 files in other folders)
