[project]
name = "coana"
version = "0.1.0"
description = "Sistema de contabilidad analítica universitaria"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "streamlit>=1.54.0",
    "streamlit-antd-components>=0.3.2",
    "typer>=0.21.1",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coana*"]

[project.scripts]
coana = "coana.cli:main"
editor_de_arboles = "coana.apps.editor_tree:main"
"especificación" = "coana.apps.gen_especificacion:main"
