[project]
name = "coana"
version = "0.1.0"
description = "Sistema de contabilidad analítica universitaria"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "streamlit>=1.54.0",
    "streamlit-antd-components>=0.3.2",
    "typer>=0.21.1",
    "uvicorn[standard]>=0.32.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coana*"]

[tool.setuptools.package-data]
"coana.web" = ["dist/**/*"]

[project.scripts]
coana = "coana.cli:main"
visor = "coana.web.launcher:main"
editor_de_arboles = "coana.apps.editor_tree:main"
"especificación" = "coana.apps.gen_especificacion:main"
